# gha-version-test

./: Cargo.toml  Dockerfile  compose.yaml
.github/workflows/: ci.yml
migrations/: 20240926180740_initial.down.sql  20240926180740_initial.up.sql
src/: errors.rs  main.rs
