[package]
name = "gha-version-test"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
async-nats = "0.36.0"
axum = "0.7.6"
chrono = { version = "0.4.38", features = ["serde"] }
dotenvy = "0.15.7"
futures = "0.3.30"
rand = "0.8.5"
reqwest = { version = "0.12.7", default-features = false, features = [
  "json",
  "rustls-tls",
] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
sqlx = { version = "0.8.0", features = [
  "time",
  "uuid",
  "postgres",
  "chrono",
  "runtime-tokio",
  "macros",
  "migrate",
] }
tokio = { version = "1.40.0", features = ["full"] }
uuid = { version = "1.10.0", features = ["v4", "serde"] }
